--- a/README
+++ b/README
@@ -1,18 +1,14 @@
-Welcome to your Appcelerator Titanium Mobile Project
+<h2> AppCelerator App </h2>
 
-This is a blank project.  Start by editing your application's app.js to 
-make your first mobile project using Titanium.
+<h4>Dependencies</h4>
+<ul>
+	<li>Jquery</li>
+	<li>OpenLayers</li>
+	<li>HighCharts</li>
+</ul>
+
+<br/>
+Basic app that use different JS libraries to apply functionalities like charts and maps.
 
 
-
-----------------------------------
-Stuff our legal folk make us say:
-
-Appcelerator, Appcelerator Titanium and associated marks and logos are 
-trademarks of Appcelerator, Inc. 
-
-Titanium is Copyright (c) 2008-2013 by Appcelerator, Inc. All Rights Reserved.
-
-Titanium is licensed under the Apache Public License (Version 2). Please
-see the LICENSE file for the full license.
 
