--- a/README
+++ b/README
@@ -1,14 +1,31 @@
-<h2> AppCelerator App </h2>
+ AppCelerator App 
+ ================
 
-<h4>Dependencies</h4>
-<ul>
-	<li>Jquery</li>
-	<li>OpenLayers</li>
-	<li>HighCharts</li>
-</ul>
 
-<br/>
+ Dependencies
+ ------------
+
+	1. Jquery
+	2. OpenLayers
+	3. HighCharts
+
+
+
 Basic app that use different JS libraries to apply functionalities like charts and maps.
+
+For use the example: 
+
+	* Clone the repository git@github.com:suca/appcelerator-webviews.git
+	* In your Titanium Studio go to File > Import > General > Existing Folder as New Project
+
+Other way
+	*  In your Titanium Studio go to File > Import > Git > Git Repository as New Project
+
+
+ Getting Started
+ ---------------	
+
+ Select the project on your files tree and Run
 
 
 
